# thredis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  invoice_service.py  models.py  notification_service.py  order_service.py  publish_orders.py
src/thredis/: __init__.py  _health.py  _maintenance.py  _shutdown.py  app.py  context.py  group.py  message.py  middleware.py  publisher.py  subscriber.py  types.py
src/thredis/middlewares/: __init__.py  error_handler.py  timeout.py  trace.py
tests/: conftest.py  test_middlewares.py  test_publisher.py
tests/app/: conftest.py  test_groups.py  test_health.py  test_middleware.py  test_publish.py  test_subscriber.py
tests/subscriber/: conftest.py  test_backpressure.py  test_basics.py  test_maintenance.py  test_reliability.py  test_scaling.py  test_threading.py
